--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="../index.css">
     
-    <title>Avia</title>
+    <title>Blog</title>
   </head>
   <body class="root">
     
